--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,12 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.6.16</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
